# gRPC-DoubleEcho

./: README.md  client.py  definition.proto  definition_pb2.py  definition_pb2_grpc.py  double_echo.proto  gen_python_from_proto.sh  pyproject.toml  server.py
autogenerated/: double_echo_pb2.py  double_echo_pb2_grpc.py
